--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,86 @@
+.container {
+  padding: 100px;
+}
+
+.card {
+  padding: 40px 0px;
+  background-color: #ebedf3;
+  border-color: #ebedf3;
+  width: 400px;
+  display: block;
+  margin: 0 auto;
+}
+
+input.search {
+  font-size: 15px;
+  border: 1px rgb(41, 41, 41) solid;
+  border-radius: 6px;
+  background-color: rgb(41, 41, 41);
+  padding: 6px 6px;
+  color: #ebedf3;
+  position: relative;
+  top: -5px;
+}
+
 h1 {
   text-align: center;
-  font-family: "Courier New", Courier, monospace;
-  color: blue;
+  padding: 20px;
+  font-family: "Comfortaa", cursive;
+  font-family: "Montserrat", sans-serif;
+  font-size: 40px;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: "Comfortaa", cursive;
+  font-family: "Montserrat", sans-serif;
+}
+
+span.icon-today {
+  font-size: 60px;
+  line-height: 1;
+  margin-left: 30px;
+}
+
+.description-today {
+  font-weight: 600;
+}
+
+span.date,
+.unit {
+  font-size: 15px;
+  position: relative;
+  top: -30px;
+  font-weight: 400;
+}
+
+li.temp-today {
+  font-size: 60px;
+  text-align: center;
+}
+
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.data-desc {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.col-2 {
+  text-align: center;
+}
+
+.forecast {
+  font-size: 12px;
+  font-weight: 100;
 }
