integrated api info for real forecast data

--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,9 @@ a:hover {
   font-weight: 100;
 }
 
+#forecast-icons {
+  width: 16px;
+}
 .open-source-link {
   text-align: center;
   margin: -50px;
